syntax = "proto3";
option go_package = "theterriblechild/CloudApp/cloud_appplication_portal/cloud_applications/novel_application/internal/app/novelapplication/service";
import "model.proto";
package novelapplicationservice;

service NovelService{
    rpc AddNovel (AddNovelRequest) returns (model.Novel) {}
    rpc GetNovel (GetNovelRequest) returns (model.Novel) {}
}

message AddNovelRequest {

}

message GetNovelRequest {

}

service ChapterService {
    rpc AddChapter (AddChapterRequest) returns (model.Chapter) {}
    rpc GetChapter (GetChapterRequest) returns (model.Chapter) {}
}

message AddChapterRequest {

}

message GetChapterRequest {

}