syntax = "proto3";

package connectorservice;

service Connector{
    rpc GetNovelData (NovelDownloadRequest) returns (NovelDownloadReply) {}
    rpc GetChapterData (ChapterDownloadRequest) returns (ChapterDownloadReply) {}
}

message NovelDownloadRequest {
    string source_id = 1;
    string novel_id = 2;
}

message NovelDownloadReply {
    NovelSourceData novel_data = 1;
}

message ChapterDownloadRequest {
    ChapterSourceMetadata chapter_metadata = 1;
}

message ChapterDownloadReply {
    ChapterSourceData chapter_data = 1;
}

message NovelSourceData {
    NovelSourceMetadata metadata = 1;
    repeated ChapterSourceMetadata chapters = 2;
}

message NovelSourceMetadata {
    string id = 1;
    string name = 2;
    string source_id = 3; 
}

message ChapterSourceData {
    ChapterSourceMetadata metadata = 1;
    string content = 2;
}

message ChapterSourceMetadata {
    string id = 1;
    string name = 2;
    int32 index = 3;
    string source_id = 4;
    string url = 5;
}

